[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 79
skip-string-normalization = true
py36 = false
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.env
    | \.tox
    | build
    | deform\.egg-info
    | dist
    | docs
    | env
    | [Ff]irefox*
  )/
)
'''

# This next section only exists for people that have their editors
# automatically call isort. Black already sorts entries on its own when run.
[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
force_single_line = true
force_sort_within_sections = true
import_heading_stdlib = "Standard Library"
import_heading_pyramid = "Pyramid"
import_heading_firstparty = "Deform"
include_trailing_comma = true
known_first_party = "deform"
known_pyramid = "colander,jinja2,plaster,pyramid,pyramid_layout,venusian,zope,transaction,pyramid_chameleon,Chameleon"
line_length = 79
lines_after_imports = 2
multi_line_output = 3
no_lines_before = "THIRDPARTY"
profile = "black"
sections = "FUTURE,STDLIB,PYRAMID,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_glob = ["docs/*"]
