[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deform"
version = "3.0.0.dev0"
description = "Form library with advanced features like nested forms"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "BSD-derived"}
authors = [
    {name = "Chris McDonough, Agendaless Consulting", email = "pylons-discuss@googlegroups.com"},
]
maintainers = [
    {name = "Josip Delić", email = "delijati@gmx.net"},
    {name = "Stéphane Brunner", email = "stephane.brunner@gmail.com"},
]
keywords = ["web", "forms", "form", "generation", "schema", "validation", "pyramid"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "Chameleon>=2.5.1",
    "colander>=1.0",
    "iso8601",
    "peppercorn>=0.3",
    "translationstring>=1.0",
    "zope.deprecation",
]

[project.optional-dependencies]
lint = [
    "black",
    "check-manifest",
    "flake8",
    "flake8-bugbear",
    "flake8-builtins",
    "isort",
    "rstcheck",
    "readme_renderer",
]
testing = [
    "beautifulsoup4",
    "coverage",
    "flaky",
    "pyramid",
    "pytest",
    "pytest-cov",
]
functional = [
    "pygments",
    "waitress",
    "lingua",
    "selenium>=4.0.0.b4,<4.10.0",
]
docs = [
    "Sphinx>=1.7.4",
    "repoze.sphinx.autointerface",
    "pylons_sphinx_latesturl",
    "pylons-sphinx-themes",
]
dev = [
    "black",
    "check-manifest",
    "flake8",
    "flake8-bugbear",
    "flake8-builtins",
    "isort",
    "rstcheck",
    "readme_renderer",
    "beautifulsoup4",
    "coverage",
    "flaky",
    "pyramid",
    "pytest",
    "pytest-cov",
    "pygments",
    "waitress",
    "lingua",
    "selenium>=4.0.0.b4,<4.10.0",
    "Sphinx>=1.7.4",
    "repoze.sphinx.autointerface",
    "pylons_sphinx_latesturl",
    "pylons-sphinx-themes",
]

[project.urls]
Homepage = "https://docs.pylonsproject.org/projects/deform/en/latest/"
Documentation = "https://docs.pylonsproject.org/projects/deform/en/3.0-branch/"
Changelog = "https://docs.pylonsproject.org/projects/deform/en/3.0-branch/changes.html"
"Issue Tracker" = "https://github.com/Pylons/deform/issues"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["deform/tests"]
addopts = "-W always"

[tool.check-manifest]
ignore-bad-ideas = ["*.mo"]

[tool.babel.compile_catalog]
directory = "deform/locale"
domain = "deform"
statistics = true

[tool.babel.extract_messages]
add_comments = "TRANSLATORS:"
output_file = "deform/locale/deform.pot"
width = 80

[tool.babel.init_catalog]
domain = "deform"
input_file = "deform/locale/deform.pot"
output_dir = "deform/locale"

[tool.babel.update_catalog]
domain = "deform"
input_file = "deform/locale/deform.pot"
output_dir = "deform/locale"
previous = true

[tool.black]
line-length = 79
skip-string-normalization = true
py36 = false
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.env
    | \.tox
    | build
    | deform\.egg-info
    | dist
    | docs
    | env
    | [Ff]irefox*
  )/
)
'''

# This next section only exists for people that have their editors
# automatically call isort. Black already sorts entries on its own when run.
[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
force_single_line = true
force_sort_within_sections = true
import_heading_stdlib = "Standard Library"
import_heading_pyramid = "Pyramid"
import_heading_firstparty = "Deform"
include_trailing_comma = true
known_first_party = "deform"
known_pyramid = "colander,jinja2,plaster,pyramid,pyramid_layout,venusian,zope,transaction,pyramid_chameleon,Chameleon"
line_length = 79
lines_after_imports = 2
multi_line_output = 3
no_lines_before = "THIRDPARTY"
profile = "black"
sections = "FUTURE,STDLIB,PYRAMID,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_glob = ["docs/*"]
